[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Badges/Paper.png" type="Texture" id=1]
[ext_resource path="res://Assets/Types/Electric.png" type="Texture" id=2]
[ext_resource path="res://Assets/moveCardBase.png" type="Texture" id=3]
[ext_resource path="res://Scripts/MoveCardScene.gd" type="Script" id=4]
[ext_resource path="res://Assets/Fonts/fffForwardFont-pixelArt.tres" type="DynamicFont" id=6]


[node name="MoveCardScene" type="Node2D"]
script = ExtResource( 4 )

[node name="NinePatchRect" type="NinePatchRect" parent="."]
margin_top = -1.0
margin_right = 127.0
margin_bottom = 126.0
texture = ExtResource( 3 )

[node name="type" type="Sprite" parent="."]
position = Vector2( 101, 95 )
scale = Vector2( 0.560788, 0.560788 )
texture = ExtResource( 2 )

[node name="nameLabel" type="Label" parent="."]
margin_left = 17.0
margin_top = 17.0
margin_right = 209.0
margin_bottom = 54.0
rect_scale = Vector2( 0.5, 0.5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 6 )
text = "Tackle"
align = 1
valign = 1

[node name="damageLabel" type="Label" parent="."]
margin_left = 86.0
margin_top = 52.0
margin_right = 100.0
margin_bottom = 99.0
rect_scale = Vector2( 0.5, 0.5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 6 )
text = "1"

[node name="affinityCostLabel" type="Label" parent="."]
margin_left = 17.0
margin_top = 82.0
margin_right = 39.0
margin_bottom = 129.0
rect_scale = Vector2( 0.5, 0.5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 6 )
text = "0"

[node name="Button" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 15.0
margin_top = 1.0
margin_right = 111.0
margin_bottom = 119.0

[node name="badge" type="Sprite" parent="."]
position = Vector2( 64, 73 )
scale = Vector2( 0.998792, 0.998792 )
texture = ExtResource( 1 )

[connection signal="card_used" from="." to="." method="card_was_used"]
[connection signal="card_used" from="." to="." method="_on_MoveCardScene_card_used"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
